# llm-quota-tracker

./: AGENTS.md  CHANGELOG.md  README.md  calculators.py  config_loader.py  discovery.py  history.py  main.py  pyproject.toml  registry.py  setup_wizard.py  ui.py
docs/images/: dashboard-preview.txt
docs/superpowers/plans/: 2026-05-27-auto-discovery-implementation.md
docs/superpowers/specs/: 2026-05-27-auto-discovery-quota-engine.md
providers/: _opencode_auth.py  base.py  claude.py  copilot.py  cursor.py  ollama.py  openai.py  opencode.py  zai.py
